@@ -24,6 +24,12 @@ ALTER TABLE `team`
 ALTER TABLE `team_affiliation`
   MODIFY COLUMN `country` char(3) default NULL COMMENT 'ISO 3166-1 alpha-3 country code',
 
+ALTER TABLE `scoreboard_jury`
+  ADD COLUMN `pending` int(4) NOT NULL COMMENT 'Number of submissions pending judgement' AFTER `submissions`;
+
+ALTER TABLE `scoreboard_public`
+  ADD COLUMN `pending` int(4) NOT NULL COMMENT 'Number of submissions pending judgement' AFTER `submissions`;
+
 CREATE TABLE `auditlog` (
   `logid` int(10) unsigned NOT NULL AUTO_INCREMENT,
   `logtime` datetime NOT NULL,
@@ -49,6 +55,11 @@ CREATE TABLE `balloon` (
 
 GRANT INSERT ON auditlog TO `domjudge_team`;
 
+GRANT INSERT ON scoreboard_jury   TO `domjudge_team`;
+GRANT DELETE ON scoreboard_jury   TO `domjudge_team`;
+GRANT INSERT ON scoreboard_public TO `domjudge_team`;
+GRANT DELETE ON scoreboard_public TO `domjudge_team`;
+
 FLUSH PRIVILEGES;
 
 --
@@ -60,6 +71,8 @@ FLUSH PRIVILEGES;
 --
 
 UPDATE team_affiliation SET country = "NLD" WHERE country = "NL";
+
+INSERT INTO `configuration` (`name`, `value`) VALUES ('show_pending', '0');
 
 --
 -- Finally remove obsolete structures after moving data
